# game-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  animation.h  app.cpp  app.h  game_client.h  game_net_common.h  game_server.cpp  game_server.h  gameengine.cpp  gameengine.h  gameobject.h  imgui.ini  level_manifest.cpp  level_manifest.h  main.cpp  notes.txt  timer.h  tmx.cpp  tmx.h  ui_manager.cpp  ui_manager.h
cmake/: FixupBundle.cmake.in  MacBundle.plist.in
engine/include/engine/: animation.h  engine.h  gameobject.h  gameplay_simulation.h  igame_rules.h  level_types.h  timer.h  ui_manager.h
engine/include/engine/net/: game_client.h  game_net_common.h  game_server.h  lan_discovery.h
engine/src/: engine.cpp  game_server.cpp  gameplay_simulation.cpp  lan_discovery.cpp  tmx.cpp  ui_manager.cpp
game/include/game/: app.h  default_systems.h  game_resources.h  game_rules.h  level_manifest.h  progression_service.h  ui_controller.h
game/include/game/interfaces/: i_bootstrap.h  i_input_system.h  i_render_system.h  i_simulation_system.h  i_ui_flow.h
game/src/: app.cpp  default_bootstrap.cpp  default_input_system.cpp  default_render_system.cpp  default_simulation_system.cpp  default_ui_flow.cpp  game_resources.cpp  game_rules.cpp  legacy_loop.cpp  level_manifest.cpp  main.cpp  progression_service.cpp  render_system.cpp  simulation_system.cpp  ui_controller.cpp  ui_flow.cpp  world_builder.cpp
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
net/: net_client.h  net_common.h  net_connection.h  net_message.h  net_server.h  net_ts_queue.h
scripts/: build_bundle.sh
tests/: net_common_tests.cpp
